SFDCProject/src/objects/Partner_Certification__c.object
<CustomObject>
    <description>Contains information about contacts who have completed NetExam Certifications</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account of Contact who achieved the Certification</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Certification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Certification</description>
        <label>Certification</label>
        <referenceTo>NECertification__c</referenceTo>
        <relationshipLabel>Partner Certifications</relationshipLabel>
        <relationshipName>Partner_Certification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date Certification was completed</description>
        <label>Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who obtained the Certification</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Partner_Certification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date Certification was Expired.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <label>Partner Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Certification_View</fullName>
        <columns>Certification__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Certification View</label>
    </listViews>
    <listViews>
        <fullName>Certifications</fullName>
        <columns>Certification__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Certifications</label>
    </listViews>
    <listViews>
        <fullName>Partner_Certification_View</fullName>
        <columns>Certification__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Partner Certification View</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Partner Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>